--- a/style.css
+++ b/style.css
@@ -205,6 +205,8 @@ main {
 .dash1-proimg {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+
   gap: 10px;
   width: 100px;
   height: 20px;
@@ -290,8 +292,10 @@ main {
 .dash3-t {
   width: 100%;
   height: 30px;
+
   display: flex;
-  /* background-color: green; */
+    flex-wrap: wrap;
+/* background-color: green; */
   justify-content: space-between;
   align-items: center;
   padding: 20px;
@@ -341,6 +345,8 @@ main {
   background-color: #181818;
 
   display: flex;
+  flex-wrap: wrap;
+
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -438,6 +444,8 @@ main {
   /* background-color: aqua; */
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
+
   justify-content: center;
   align-items: center;
 }
@@ -452,6 +460,8 @@ main {
   /* background-color: olivedrab; */
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
+
   flex-direction: column;
   justify-content: center;
 }
